Complete CkVIP Core.(no tests)

--- a/CkVIP/resources/messages.yml
+++ b/CkVIP/resources/messages.yml
@@ -1,7 +1,34 @@
 ---
 lang_profile: '中文(简体)'
+lang_author: 'CKylinMC'
+lang_description: '(会员系统简体中文默认语言文件)'
 vip_0: '普通玩家'
 vip_1: '1星会员'
 vip_2: '2星会员'
 vip_3: '3星会员'
+coin: 'KP'
+player: '玩家'
+vip: '会员'
+viplevel: '会员等级'
+unknow: '未知'
+expire: '过期时间'
+status: '状态'
+status-normal: '正常'
+status-freezed: '冻结'
+status-warning: '警告'
+forever: '永不过期'
+player-profile-created: '已建立玩家 %s 的个人数据'
+player-not-exist: '玩家 %s 不存在'
+param-invalid: '参数 %s 无效或其值无效'
+viplevel-invalid: '会员等级 %s 无效'
+info-title: '=[信息]======'
+info-player: '玩家'
+cmd-success: '命令执行成功'
+cmd-failed: '命令执行出错'
+cmd-setpl-description: '用于设置玩家信息，可以使用的参数有coins(KP数)、lv(会员级别)、day(会员有效天数)'
+cmd-setpl-usage: '/setpl <player> <key=value> [<key=value> ...]'
+cmd-getpl-description: '用于查询玩家信息'
+cmd-getpl-usage: '/getpl <player>'
+cmd-myinfo-description: '用于查询自己的信息'
+cmd-myinfo-usage: '/myinfo'
 ...
