--- a/CkVIP/plugin.yml
+++ b/CkVIP/plugin.yml
@@ -1,6 +1,6 @@
 #name, main, version and api are required
-name: CkVIP
-main: CKylin\CkVIP
+name: CkVIPCore
+main: CKylinMC\CkVIP
 version: 1.1.0
 api: 3.0.0
 
@@ -8,12 +8,3 @@ load: POSTWORLD
 author: CKylinMC
 description: A Simple VIP Plugin.
 website: https://github.com/cansll/CkVIP
-commands:
- example:
-  description: Example command
-  usage: "/example"
-  permission: exampleplugin.command.example
-permissions:
- exampleplugin.command.example:
-  description: "Allows the user to run the example command"
-  default: true
