--- a/CkVIP/resources/messages.yml
+++ b/CkVIP/resources/messages.yml
@@ -10,7 +10,10 @@ coin: 'KP'
 player: '玩家'
 vip: '会员'
 viplevel: '会员等级'
+reallevel: '实际等级'
 unknow: '未知'
+valid: '有效'
+invalid: '无效'
 expire: '过期时间'
 status: '状态'
 status-normal: '正常'
