--- a/CkVIP/resources/messages.yml
+++ b/CkVIP/resources/messages.yml
@@ -1,7 +1,7 @@
 ---
 lang_profile: '中文(简体)'
 lang_author: 'CKylinMC'
-lang_description: '(会员系统简体中文默认语言文件)'
+lang_description: '(会员系统简体中文默认语言文件 Ver 1.01)'
 vip_0: '普通玩家'
 vip_1: '1星会员'
 vip_2: '2星会员'
@@ -26,6 +26,13 @@ param-invalid: '参数 %s 无效或其值无效'
 viplevel-invalid: '会员等级 %s 无效'
 info-title: '=[信息]======'
 info-player: '玩家'
+success-add-coins: '成功添加 %sKP 到玩家账户'
+success-reduce-coins: '成功从玩家账户中减少  %sKP'
+failed-account-freezed: '操作失败: 玩家 %s 账户已冻结'
+failed-out-of-warning-limit: '操作失败: 玩家 %s 账户已超出警告限额'
+failed-out-of-limit: '操作失败: 玩家 %s 账户已超出限额'
+failed-task-canceled: '操作被取消'
+failed-default: '操作失败'
 cmd-success: '命令执行成功'
 cmd-failed: '命令执行出错'
 cmd-setpl-description: '用于设置玩家信息，可以使用的参数有coins(KP数)、lv(会员级别)、day(会员有效天数)'
