--- a/CkVIPLoginTips/plugin.yml
+++ b/CkVIPLoginTips/plugin.yml
@@ -1,19 +1,11 @@
 #name, main, version and api are required
-name: CkVIP
-main: CKylin\CkVIP
+name: CkVIPLoginTips
+main: CKylinMC\CkVIPLoginTips
 version: 1.1.0
 api: 3.0.0
 
 load: POSTWORLD
+depend: [CkVIPCore]
 author: CKylinMC
 description: A Simple VIP Plugin.
-website: https://github.com/cansll/CkVIP
-commands:
- example:
-  description: Example command
-  usage: "/example"
-  permission: exampleplugin.command.example
-permissions:
- exampleplugin.command.example:
-  description: "Allows the user to run the example command"
-  default: true
+website: https://github.com/cansll/CkVIPs
